# pyreact

./: .cursorrules  .gitignore  AGENTS.md  COOKBOOK.md  README.md  broken_demo.pyreact  broken_demo2.pyreact  demo.pyreact  demo_routing.pyreact  pyproject.toml  pyreact_improvement_plan.md  pyreact_prd.md
dist_routing/: manifest.json
dist_routing/backend/: app.py  generated_api.py  requirements.txt  routes.py
dist_routing/deployment/: Dockerfile  README.md  fly.toml  nginx.conf  start.sh
dist_routing/desktop/src-tauri/: Cargo.toml  tauri.conf.json
dist_routing/frontend/: index.html  package.json
dist_routing/mobile/: App.js  package.json
dist_routing/static/: index.html
pyreact/: __init__.py  cli.py
pyreact/compiler/: __init__.py  ai.py  audit.py  codegen.py  errors.py  healer.py  lexer.py  lsp.py  openapi.py  parser.py  ppr.py  router.py  tester.py  typechecker.py
pyreact_web.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: .gitignore  README.md  app.pyreact  test_cli_templates.py  test_compiler_errors.py  test_fase12.py  test_fase13.py  test_fase14.py  test_fase15.py  test_fase18.py  test_fase19.py  test_fase20.py  test_fase21.py  test_fase22.py  test_fase23.py  test_fase24.py  test_fase25.py  test_fase26.py  test_fase27.py  test_fase28.py  test_fase29.py  test_init_wizard.py  test_sprint1_ai_awareness.py  test_sprint2_3_hooks_tooling.py  test_sprint4_5_ui_perf.py  test_sprint6_deploy_db_env.py
vscode-extension/: language-configuration.json  package.json
vscode-extension/src/: extension.js
(+21 files in other folders)
