[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "pyreact-web"
version         = "0.1.2"
description     = "The Python-Powered Fullstack Language"
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "Yuda Hasibuan"}]
requires-python = ">=3.11"
dependencies    = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
pyreact = "pyreact.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyreact*"]
