[package]
name = "pyreact-desktop-app"
version = "0.1.0"
description = "Tauri wrapper for PyReact"
authors = ["Yuda Hasibuan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
